fixed jumping drag error

--- a/src/style.scss
+++ b/src/style.scss
@@ -27,9 +27,9 @@ body {
   border: white;
   border-style: solid;
   color: white;
+  position: absolute;
   resize: both;
   overflow: auto;
-
 }
 
 #note-header {
